2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* buildrun.cxx (compile_pass, run_pass): Get closer to a working
	test_mode.
	* translate.cxx (emit_module_init, emit_common_header): Ditto.
	(translate_pass): Ditto.

2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (stpd): Install in $pkglibdir.
	(runtime): Copy to $pkgdatadir.
	* configure.ac: Pass along pkgdatadir and pkglibdir.
	* main.cxx: Default runtime_path from pkgdatadir.
	* buildrun.cxx (run_pass): Correct stpd directory.
	* Makefile.in, configure, config.in: Regenerated.

2005-07-12  Graydon Hoare  <graydon@redhat.com>

	* elaborate.cxx
	(semantic_pass_symbols): Only enter body if non-null.
	(semantic_pass_types): Likewise.
	(semantic_pass): Pass session to register_standard_tapsets.
	* translate.cxx
	(builtin_collector): New struct.
	(hookup_builtins): New function.
	(translate_pass): Only translate functions with bodies.
	(c_unparser::emit_common_header): Likewise, and call hookup_builtins.
	* tapsets.hh (builtin_function): New class.
	(register_standard_tapsets): Change parameter to session.
	* tapsets.cc (bultin_function::*): Implement class.
	(register_standard_tapsets): Register printk, log, warn.
	* testsuite/transok/six.stp: New test.

2005-07-12  Frank Ch. Eigler  <fche@redhat.com>

	* buildrun.cxx (compile_pass): Make non-verbose mode quieter.
	(run_pass): Spawn stpd for dirty work.
	* Makefile.am: Also build stpd into libexecdir.
	* configure.ac: Pass LIBEXECDIR.
	* Makefile.in, configure, config.in: Regenerated.
	* AUTHORS: Update.

2005-07-11  Graydon Hoare  <graydon@redhat.com>

	* staptree.cxx (require): Generally handle null pointers in src.
	(deep_copy_visitor::visit_if_statement): Revert fche's change.

2005-07-11  Frank Ch. Eigler  <fche@redhat.com>

	* parse.cxx (parse_literal): Compile cleanly on 64-bit host.
	* staptree.cxx (deep_copy_visitor::visit_if_statement): Don't
	freak on a null if_statement.elseblock.

2005-07-07  Graydon Hoare  <graydon@redhat.com>
